Fixed overflow issues on homepage due to font-size.

--- a/public/home.css
+++ b/public/home.css
@@ -123,7 +123,7 @@ h3{
     color:#FFF; 
     font-family: 'Raleway', sans-serif;
     text-shadow:0.5px 0.5px black;
-    font-size:calc(0.8em + 2vmin);
+    font-size: clamp(1rem, 1vw + 1rem, 2rem);
     border-bottom:3px #2a2a2a solid; 
 }
 
@@ -159,6 +159,11 @@ p{
     box-shadow: 0 0 4px #9ecaed;
 
 }
+@media (min-width:1200px){
+    .postSection{
+        width:40%;
+    }
+}
 
 .postImage{
     height:100%; 
@@ -185,7 +190,7 @@ p{
 .postTitle{
     margin-left:0; 
     text-align:center;
-    font-size:calc(0.6em + 2vmin);
+    font-size: clamp(1rem, 0.9vw + 0.9rem, 1.8rem);
     width:80%;
     margin-left:10%;
 }
@@ -271,7 +276,7 @@ p{
     font-family: 'Raleway', sans-serif;
     text-align: center;
     color:white;
-    font-size:calc(0.6em + 2vmin);
+    font-size: clamp(1rem, 0.9vw + 0.9rem, 1.8rem);
     font-weight: 700;
 }
 
